[package]
name = "muonts"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
burn = {version = "0.11.1", features = ["ndarray", "train", "autodiff"]}
serde = "1.0.193"
tracing = "0.1.40"
