[package]
name = "muonts"
version = "0.1.0"
edition = "2021"
homepage = "https://github.com/clsdaniel/muonts"
repository = "https://github.com/clsdaniel/muonts"
description = "Timeseries models in rust"
categories = ["Science", "Mathematics"]
keywords = ["timeseries", "forecasting", "ml", "machine-learning", "deep-learning"]
license = "Apache-2.0"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
burn = {version = "0.11.1", features = ["ndarray", "train", "autodiff"]}
serde = "1.0.193"
tracing = "0.1.40"
